err.txt
/mnt/rafast/musolino/thunder/test/test_interpolators.cpp:48:55: warning: initializing pointer member 'x' with the stack address of variable 'xx' [-Wdangling-field]
        auto interpolator = utils::linear_interp_t<1>(xx,yy) ; 
                                                      ^~
/mnt/rafast/musolino/thunder/include/thunder/utils/interpolators.hh:57:13: note: pointer member declared here
    double *x, *y; 
            ^
/mnt/rafast/musolino/thunder/test/test_interpolators.cpp:48:58: warning: initializing pointer member 'y' with the stack address of variable 'yy' [-Wdangling-field]
        auto interpolator = utils::linear_interp_t<1>(xx,yy) ; 
                                                         ^~
/mnt/rafast/musolino/thunder/include/thunder/utils/interpolators.hh:57:17: note: pointer member declared here
    double *x, *y; 
                ^
/mnt/rafast/musolino/thunder/test/test_interpolators.cpp:98:66: error: expected ';' after expression
        utils::linear_interp_t<2>::get_parametric_coordinates(xp)
                                                                 ^
                                                                 ;
/mnt/rafast/musolino/thunder/test/test_interpolators.cpp:105:55: warning: initializing pointer member 'x' with the stack address of variable 'xx' [-Wdangling-field]
        auto interpolator = utils::linear_interp_t<2>(xx,yy) ; 
                                                      ^~
/mnt/rafast/musolino/thunder/include/thunder/utils/interpolators.hh:77:13: note: pointer member declared here
    double *x, *y;
            ^
/mnt/rafast/musolino/thunder/test/test_interpolators.cpp:105:58: warning: initializing pointer member 'y' with the stack address of variable 'yy' [-Wdangling-field]
        auto interpolator = utils::linear_interp_t<2>(xx,yy) ; 
                                                         ^~
/mnt/rafast/musolino/thunder/include/thunder/utils/interpolators.hh:77:17: note: pointer member declared here
    double *x, *y;
                ^
4 warnings and 1 error generated when compiling for gfx906.
gmake[2]: *** [test/CMakeFiles/interpolator_test.dir/build.make:76: test/CMakeFiles/interpolator_test.dir/test_interpolators.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:1023: test/CMakeFiles/interpolator_test.dir/all] Error 2
gmake: *** [Makefile:101: all] Error 2
